force-app/main/default/objects/PPRS_SObject_Setting__mdt/PPRS_SObject_Setting__mdt.object-meta.xml
<CustomObject>
    <label>PPRS SObject Setting</label>
    <pluralLabel>PPRS SObject Settings</pluralLabel>
</CustomObject>