force-app/main/default/objects/PPRS_SObject_Setting__mdt/fields/DynamoDB_Partition_Key__c.field-meta.xml
<CustomField>
    <fullName>DynamoDB_Partition_Key__c</fullName>
    <label>DynamoDB Partition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>