force-app/main/default/objects/PPRS_SObject_Setting__mdt/fields/DynamoDB_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>DynamoDB_Table_Name__c</fullName>
    <label>DynamoDB Table Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>