force-app/main/default/objects/PPRS_SObject_Setting__mdt/fields/Last_Synced_Field__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced_Field__c</fullName>
    <label>Last Synced Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>