force-app/main/default/objects/PPRS_SObject_Setting__mdt/fields/Schedulable__c.field-meta.xml
<CustomField>
    <fullName>Schedulable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedulable</label>
    <type>Checkbox</type>
</CustomField>