force-app/main/default/objects/PPRS_SObject_Setting__mdt/fields/Schedulable_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedulable_Day__c</fullName>
    <label>Schedulable Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>