force-app/main/default/objects/PPRS_SObject_Setting__mdt/fields/Schedulable_Period__c.field-meta.xml
<CustomField>
    <fullName>Schedulable_Period__c</fullName>
    <label>Schedulable Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>daily</fullName>
                <default>true</default>
                <label>daily</label>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>